<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="5dp"
    android:gravity="clip_vertical"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:id="@+id/nama"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/npm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:id="@+id/npm"
        android:inputType="number"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:layout_width="match_parent"
        android:id="@+id/gender_spin"
        android:entries="@array/gender_spin"
        android:autofillHints="@string/gender"
        android:layout_height="wrap_content">

    </Spinner>
    <TextView
        android:text="@string/deskripsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:gravity="top"
        android:id="@+id/deskripsi"
        android:hint="@string/hideskripsi"
        android:lines="5"
        android:inputType="textMultiLine"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/btnProses"
        android:id="@+id/btn"
        android:onClick="gotoResult"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />
</LinearLayout>