<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="40dp"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:text="@string/edsatu"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_width="match_parent"
        android:layout_marginBottom="20dp"
        android:text="@string/eddua"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/btnLogin"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:text="@string/btnRegis"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content" />

</LinearLayout>