<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="5dp"
    android:gravity="clip_vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nama"
        android:text="@string/name"
        android:textSize="28dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/npm"
        android:textSize="22dp"
        android:text="@string/npm"
        android:textStyle="italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/gender"
        android:textSize="20dp"
        android:textColor="@color/colorButton"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="15dp"
        android:id="@+id/deskripsi"
        android:textSize="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>